resolved issues and hosted project on cloud in june

--- a/SalesInventory/WebContent/Login.html
+++ b/SalesInventory/WebContent/Login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Login</title>
+<title>Sales & Inventory System</title>
 </head>
 <body bgcolor="Brown">
 	<table align="Right">
@@ -19,7 +19,7 @@
 	</h1>
 	<h4>
 		<font color="White">Manage Product stock and Inventory online</font>
-		&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<p align=center><font size="4" color="White">Want to Buy Some Products from our shop!!!&emsp;</font><a href="product.jsp"><font color="White" size="5">Place Order</a></font></p>
+		&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<p align=center><font size="5" color="White">Want to Buy Some Products from our shop!!!&emsp;</font><a href="product.jsp"><font color="White" size="6">Place Order</a></font></p>
 	</h4>
 
 
@@ -68,9 +68,9 @@
 	</p>
 	<br>
 	<form action="login.jsp" method="post" align="Center">
-		User name:<input type="text" name="usr" required placeholder="Enter Username" /><br>
+		User name:<input type="text" name="usr" required placeholder="Enter Username(Admin)" /><br>
 		<br>
-		<br> Password:<input type="password" name="pwd" required placeholder="Enter Password"/><br>
+		<br> Password:<input type="password" name="pwd" required placeholder="Enter Password(invent)"/><br>
 		<br>
 		<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="submit" value="Login" />
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="reset" value="Clear"/>
