--- a/SalesInventory/WebContent/abtus.html
+++ b/SalesInventory/WebContent/abtus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>About Us</title>
+<title>Sales & Inventory System</title>
 </head>
 <body bgcolor="Brown">
 
@@ -23,7 +23,7 @@
 
 	<h4>
 		<font color="White">Manage Product stock and Inventory online</font>
-		&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<p align=center><font size="4" color="White">Want to Buy Some Products from our shop!!!&emsp;</font><a href="product.jsp"><font color="White" size="5">Place Order</a></font></p>
+		&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<p align=center><font size="5" color="White">Want to Buy Some Products from our shop!!!&emsp;</font><a href="product.jsp"><font color="White" size="6">Place Order</a></font></p>
 	</h4>
 
 
